--- a/src/components/moduleSelection.css
+++ b/src/components/moduleSelection.css
@@ -26,5 +26,49 @@
 
     border-radius: 0.5em;
 
+    box-shadow: 0.25em 0.25em 0.5em rgba(0, 0, 0, 0.1);
     
+    transition: 0.4s;
+
+    overflow: hidden;
+    
+    user-select: none;
+    cursor: pointer;
+}
+
+.modulesCard:hover {
+    box-shadow: 0.25em 0.25em 0.5em rgba(0, 0, 0, 0.75);
+}
+
+.modulesCard:hover .cardOverlay {
+    opacity: 0.1;
+}
+
+
+.modulesCard p {
+    position: absolute;
+
+    bottom: 0;
+
+    width: 100%;
+
+    margin: 0;
+    padding: 0.25em 0.5em;
+
+    font-size: 1.5em;
+    font-weight: 500;
+
+    background-color: white;
+}
+
+.modulesCard .cardOverlay {
+    background: rgb(68,68,68);
+    background: linear-gradient(135deg, rgba(68,68,68,1) 0%, rgba(68,68,68,0) 75%);
+
+    transition: 0.4s;
+
+    opacity: 0.75;
+
+    height: 100%;
+    width: 100%;
 }
